* post 2.5 changes
comedia: can show .dir file corresponding to selected module
comedia: poperly sort numeric table columns
comedia: exclude mark6 modules from .dir related content
difxdbExperiment: new utility to print experiment summary information
difxdbParseFiles: new utility to parse the FS for file-based raw data and update the database accordingly
* post 2.4 changes
getreleaselist: order output by experiment code
comedia: email notification for modules containing unknown experiments
expad: show number of modules for each experiment
difxdbModule: new utility for obtaining module information

*Version 2.4
Tagged DiFX-2.4 on Nov 4, 2014

1.1
* Various developmental improvements between DiFX-2.1 and DiFX-2.2
* Tagged as DiFX-2.2 on May 31, 2013 

*1.0 
* Initial version