@@ -4,6 +4,7 @@ comedia: poperly sort numeric table columns
 comedia: exclude mark6 modules from .dir related content
 difxdbExperiment: new utility to print experiment summary information
 difxdbParseFiles: new utility to parse the FS for file-based raw data and update the database accordingly
+difxdbSyncFiles: new utility to sync the database contents for file-based data with the FS contents
 * post 2.4 changes
 getreleaselist: order output by experiment code
 comedia: email notification for modules containing unknown experiments
